--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
           <div class="rq-real-estae-property-tab">
             <div class="rq-real-estate-tab-section">
               <div class="rq-title-container">
-                <p class="rq-subtitle">Real estate tab property</p>
-                <h2 class="rq-title">top houses maybe you will like</h2>
+                <p class="rq-subtitle" style="font-size: 23px;font-family: montserrat;">Start-Up di Bawah Naungan</p>
+                <h2 class="rq-title" style="font-size: 33px;font-family: montserrat-bold ;">bumi <span>seduh</span></h2>
               </div>
 
               <div class="related-car-faq">
@@ -208,12 +208,12 @@
                       <a href="#property-1"  role="tab" data-toggle="tab">
                         <div class="rq-category-result-single">
                           <div class="rq-result-img">
-                            <img src="assets/dist/img/real-estate/listing-category/listing-1.png" alt=""/>
+                            <img src="assets/dist/img/bumitentrem/3.jpeg" alt=""/>
                           </div>
                           <div class="rq-result-text">
-                            <h4>super villa for sale</h4>
-                            <p class="rq-listing-item-address">2495 Tident St, NY</p>
-                            <h3><span class="new-price">$850,00</span></h3>
+                            <h4>Tentrem Bumi Coffee</h4>
+                            <p class="rq-listing-item-address">JL. R.A. Kartini</p>
+                            <h3><span class="new-price">Cafe</span></h3>
                           </div>
                         </div>
                       </a>
@@ -260,104 +260,6 @@
                         </div>
                       </a>
                     </li>
-                    <li role="presentation">
-                      <a href="#property-5"  role="tab" data-toggle="tab">
-                        <div class="rq-category-result-single">
-                          <div class="rq-result-img">
-                            <img src="assets/dist/img/real-estate/listing-category/listing-5.png" alt=""/>
-                          </div>
-                          <div class="rq-result-text">
-                            <h4>funished villa for sale</h4>
-                            <p class="rq-listing-item-address">2718 Henderson Ave St, NY</p>
-                            <h3><span class="new-price">$950,00</span></h3>
-                          </div>
-                        </div>
-                      </a>
-                    </li>
-                    <li role="presentation">
-                      <a href="#property-6"  role="tab" data-toggle="tab">
-                        <div class="rq-category-result-single">
-                          <div class="rq-result-img">
-                            <img src="assets/dist/img/real-estate/listing-category/listing-1.png" alt=""/>
-                          </div>
-                          <div class="rq-result-text">
-                            <h4>Cinnamon Hotel</h4>
-                            <p class="rq-listing-item-address">Sanfrancisco, CA</p>
-                            <h3><span class="new-price"><span>$</span>78.43</span><span class="prev-price">$99.68</span></h3>
-                          </div>
-                        </div>
-                      </a>
-                    </li>
-                    <li role="presentation">
-                      <a href="#property-7"  role="tab" data-toggle="tab">
-                        <div class="rq-category-result-single">
-                          <div class="rq-result-img">
-                            <img src="assets/dist/img/real-estate/listing-category/listing-1.png" alt=""/>
-                          </div>
-                          <div class="rq-result-text">
-                            <h4>super villa for sale</h4>
-                            <p class="rq-listing-item-address">2495 Tident St, NY</p>
-                            <h3><span class="new-price">$850,00</span></h3>
-                          </div>
-                        </div>
-                      </a>
-                    </li>
-                    <li role="presentation">
-                      <a href="#property-8"  role="tab" data-toggle="tab">
-                        <div class="rq-category-result-single">
-                          <div class="rq-result-img">
-                            <img src="assets/dist/img/real-estate/listing-category/listing-2.png" alt=""/>
-                          </div>
-                          <div class="rq-result-text">
-                            <h4>detachted house to rent</h4>
-                            <p class="rq-listing-item-address">368 Brooklyn St, NY</p>
-                            <h3><span class="new-price">$250,00</span></h3>
-                          </div>
-                        </div>
-                      </a>
-                    </li>
-                    <li role="presentation">
-                      <a href="#property-9"  role="tab" data-toggle="tab">
-                        <div class="rq-category-result-single">
-                          <div class="rq-result-img">
-                            <img src="assets/dist/img/real-estate/listing-category/listing-3.png" alt=""/>
-                          </div>
-                          <div class="rq-result-text">
-                            <h4>small house for sale</h4>
-                            <p class="rq-listing-item-address">196 Halsey St, NY</p>
-                            <h3><span class="new-price">$550,00</span></h3>
-                          </div>
-                        </div>
-                      </a>
-                    </li>
-                    <li role="presentation">
-                      <a href="#property-10"  role="tab" data-toggle="tab">
-                        <div class="rq-category-result-single">
-                          <div class="rq-result-img">
-                            <img src="assets/dist/img/real-estate/listing-category/listing-4.png" alt=""/>
-                          </div>
-                          <div class="rq-result-text">
-                            <h4>apartment to rent</h4>
-                            <p class="rq-listing-item-address">242 Avenue C St, NY</p>
-                            <h3><span class="new-price">$350,00</span></h3>
-                          </div>
-                        </div>
-                      </a>
-                    </li>
-                    <li role="presentation">
-                      <a href="#property-11"  role="tab" data-toggle="tab">
-                        <div class="rq-category-result-single">
-                          <div class="rq-result-img">
-                            <img src="assets/dist/img/real-estate/listing-category/listing-5.png" alt=""/>
-                          </div>
-                          <div class="rq-result-text">
-                            <h4>funished villa for sale</h4>
-                            <p class="rq-listing-item-address">2718 Henderson Ave St, NY</p>
-                            <h3><span class="new-price">$950,00</span></h3>
-                          </div>
-                        </div>
-                      </a>
-                    </li>
                   </ul>
                 </div>
               </div>
@@ -366,21 +268,21 @@
               <div class="tab-content">
                 <div role="tabpanel" class="tab-pane fade in active" id="property-1">
                   <div class="rq-real-estate-tab-content">
-                    <div class="rq-tab-img" style="background:url('assets/dist/img/real-estate/home-tab-img.jpg') top center no-repeat; background-size:cover;">
+                    <div class="rq-tab-img" style="background:url('assets/dist/img/bumitentrem/4.jpeg') top center no-repeat; background-size:cover;">
                     </div>
                     <div class="rq-property-details">
                       <div class="property-title">
-                        <h3><a href="#">super villa for sale</a></h3>
-                        <p class="address">2495 Tident St, NY</p>
-                        <h2>$250,00</h2>
+                        <h3><a href="#">Tentrem Bumi Coffee</a></h3>
+                        <p class="address">JL.R.A. Kartini</p>
+                        <h2>Cafe</h2>
                       </div>
                       <div class="property-info">
                         <ul class="rq-property-list">
-                          <li><i class="ion-arrow-expand"></i>Acreage: <span>500m2</span></li>
-                          <li><div class="rq-bath-icon"></div>Bathroom: <span>3</span></li>
-                          <li><div class="rq-bed-icon"></div>Bedroom: <span>5</span></li>
-                          <li><i class="fa fa-building-o"></i>Property Type: <a href="#">Commercial</a></li>
-                          <li><i class="ion-ios-home-outline"></i>New Homes: <a href="#">New - Build</a></li>
+                          <li><i class="ion-arrow-expand"></i>Parkiran: <span>500m2</span></li>
+                          <li><i class="ion-ios-home-outline"></i>Mushola: <span>1</span></li>
+                          <li><div class="rq-bed-icon"></div>Kamar Mandi: <span>5</span></li>
+                          <li><i class="fa fa-building-o"></i>Meja: <span>100</span>/li>
+                          <li><i class="ion-ios-home-outline"></i>Reservasi: <!--<a href="#">--><span>Tersedia</span></a></li>
                         </ul>
                       </div>
 
@@ -625,6 +527,7 @@
 
         <div class="rq-partners-section">
           <div class="container">
+            <h2 class="rq-title" style="text-align: center;">SPONSOR BUMI <span>SEDUH</span></h2>
             <div class="partners-wrapper">
               <div class="item">
                 <div class="partner-single"><a href="#"><img src="assets/dist/img/real-estate/partner-logo/partner1.png" alt=""></a></div>
