--- a/index.html
+++ b/index.html
@@ -222,12 +222,12 @@
                       <a href="#property-2"  role="tab" data-toggle="tab">
                         <div class="rq-category-result-single">
                           <div class="rq-result-img">
-                            <img src="assets/dist/img/real-estate/listing-category/listing-2.png" alt=""/>
+                            <img style="height: ; width: 100px ; " src="assets/dist/img/logo/5.png" alt=""/>
                           </div>
                           <div class="rq-result-text">
-                            <h4>detachted house to rent</h4>
-                            <p class="rq-listing-item-address">368 Brooklyn St, NY</p>
-                            <h3><span class="new-price">$250,00</span></h3>
+                            <h4>Bumi Suplai</h4>
+                            <p class="rq-listing-item-address">JL. R.A. Kartini</p>
+                            <h3><span class="new-price">Supplier</span></h3>
                           </div>
                         </div>
                       </a>
@@ -236,12 +236,12 @@
                       <a href="#property-3"  role="tab" data-toggle="tab">
                         <div class="rq-category-result-single">
                           <div class="rq-result-img">
-                            <img src="assets/dist/img/real-estate/listing-category/listing-3.png" alt=""/>
+                            <img style="height: ; width: 113px;" src="assets/dist/img/logo/cangkirbg.png" alt=""/>
                           </div>
                           <div class="rq-result-text">
-                            <h4>small house for sale</h4>
-                            <p class="rq-listing-item-address">196 Halsey St, NY</p>
-                            <h3><span class="new-price">$550,00</span></h3>
+                            <h4>Cangkir Bumi</h4>
+                            <p class="rq-listing-item-address">JL. R.A. Kartini</p>
+                            <h3><span class="new-price">Cafe</span></h3>
                           </div>
                         </div>
                       </a>
