adding bumiseduh.html

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
                   </li>
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Agents <span class="ion-chevron-down"></span></a>
+                      aria-haspopup="true" aria-expanded="false">Profil <span class="ion-chevron-down"></span></a>
                     <ul class="dropdown-menu">
                       <li><a href="users.html">Users</a></li>
                       <li><a href="user-profile.html">User Profile</a></li>
                       <li><a href="agencies.html">Agencies</a></li>
-                      <li><a href="agency-single.html">Agency singe</a></li>
+                      <li><a href="bumiseduh.html">Bumi Seduh</a></li>
                       <li><a href="registration.html">Registration</a></li>
                     </ul>
                   </li>
@@ -176,7 +176,7 @@
                 <div class="col-md-3 col-sm-3">
                   <div class="rq-icon-box-single">
                       <img class="img-circle" width="20%" height="490" src="assets/dist/img/logo/22.png" sizes="(max-width: 234px) 200vw, 500px" style="width:50%;height:50%;max-width:250px;">
-                    <h5><br>Bumi Tentrem</h5>
+                    <h5><br>Tentrem Bumi</h5>
                     <p>Make a good price</p>
                   </div>
                 </div>
@@ -185,7 +185,7 @@
                     <div class="rq-icon-home">
                       <i class="ion-ios-heart-outline"></i>
                     </div>
-                    <h5>invest disini</h5>
+                    <h5><br>invest disini</h5>
                     <p>Cheers!</p>
                   </div>
                 </div>
@@ -222,7 +222,7 @@
                       <a href="#property-2"  role="tab" data-toggle="tab">
                         <div class="rq-category-result-single">
                           <div class="rq-result-img">
-                            <img style="height: ; width: 100px ; " src="assets/dist/img/logo/5.png" alt=""/>
+                            <img style=" width: 100px ; " src="assets/dist/img/logo/5.png" alt=""/>
                           </div>
                           <div class="rq-result-text">
                             <h4>Bumi Suplai</h4>
@@ -236,7 +236,7 @@
                       <a href="#property-3"  role="tab" data-toggle="tab">
                         <div class="rq-category-result-single">
                           <div class="rq-result-img">
-                            <img style="height: ; width: 113px;" src="assets/dist/img/logo/cangkirbg.png" alt=""/>
+                            <img style=" width: 113px;" src="assets/dist/img/logo/cangkirbg.png" alt=""/>
                           </div>
                           <div class="rq-result-text">
                             <h4>Cangkir Bumi</h4>
@@ -291,7 +291,7 @@
                 </div> <!-- end tab-pange -->
                 <div role="tabpanel" class="tab-pane fade in" id="property-2">
                   <div class="rq-real-estate-tab-content">
-                    <div class="rq-tab-img" style="background:url('assets/dist/img/real-estate/company-listing-banner.jpg') top center no-repeat; background-size:cover;">
+                    <div class="rq-tab-img" style="background:url('assets/dist/img/bumitentrem/4.jpeg') top center no-repeat; background-size:cover;">
                     </div>
                     <div class="rq-property-details">
                       <div class="property-title">
@@ -314,7 +314,7 @@
                 </div> <!-- end tab-pange -->
                 <div role="tabpanel" class="tab-pane fade in" id="property-3">
                   <div class="rq-real-estate-tab-content">
-                    <div class="rq-tab-img" style="background:url('assets/dist/img/real-estate/home-tab-img.jpg') top center no-repeat; background-size:cover;">
+                    <div class="rq-tab-img" style="background:url('assets/dist/img/bumitentrem/4.jpeg') top center no-repeat; background-size:cover;">
                     </div>
                     <div class="rq-property-details">
                       <div class="property-title">
@@ -595,63 +595,60 @@
         <div class="rq-content-block gray-bg">
           <div class="container">
             <div class="rq-title-container text-center">
-              <p class="rq-subtitle">our latest posts</p>
-              <h2 class="rq-title">tips and blogs</h2>
+              <h2 class="rq-title">Tentang <br> Bumi<span> Seduh</span></h2>
             </div>
-            <div class="rq-blog-grid-wrapper home-tips">
-              <div class="row">
-                <div class="col-md-4">
-                  <a href="#">
-                    <div class="rq-blog-grid-single wow fadeIn" data-wow-delay="0s"
-                      style="background: url('assets/dist/img/real-estate/post-single/real-estate-related1.jpg') top center no-repeat;
-                      background-size: cover;">
-                      <div class="rq-overlay"></div>
-                      <span class="company-name">title of single post with image format</span>
-                      <div class="rq-listing-meta">
-                        <span class="date">15th,Dec,2016</span>
-                        <span class="v-line">|</span>
-                        <span class="author-name"><b>by</b>Admin</span>
-                        <span class="v-line">|</span>
-                        <span class="category"><b>in</b>Tips &amp; Tricks</span>
+            <div class="rq-user-profile-page">
+              <div class="rq-user-listing-single wow fadeIn" data-wow-delay=".1s"> <!-- start company user list -->
+                <div class="rq-user-profile-pic agency-logo">
+                  <img src="assets/dist/img/real-estate/company-user/agencies1.png" alt="">
+                </div>
+                <div class="rq-user-profile-details">
+                  <div class="rq-user-pro-head">
+                    <div class="rq-user-name">
+                      <h3 class="rq-title">Bumi<span> Seduh</span></h3>
+                      <p>Company</p>
+                    </div>
+                    <div class="social-login"> <!-- start social icon div -->
+                      <ul class="social-page-nav">
+                        <li><a href="#" class="fb"><i class="social_facebook"></i></a></li>
+                        <li><a href="#" class="tw"><i class="social_twitter"></i></a></li>
+                        <li><a href="#" class="gp"><i class="social_googleplus"></i></a></li>
+                        <li><a href="#" class="ins"><i class=" social_instagram"></i></a></li>
+                        <li><a href="#" class="rs"><i class="social_rss"></i></a></li>
+                      </ul>
+                    </div> <!-- end social icon div -->
+                  </div>
+                  <div class="rq-user-adderess">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <p><i class="icon_mobile"></i>MOBILE : 0821-....-....</p>
+                        <p><i class="icon_mail_alt"></i>EMAIL : sampleemail@domain.com</p>
+                        <p><i class="social_skype"></i>SKYPE : sample_skype1234</p>
+                        <p><i class="icon_globe-2"></i>WEBSITE : <a href="#">http://bumiseduh.com/</a> </p>
+                      </div>
+                      <div class="col-md-6">
+                        <p><i class="icon_mobile"></i>LANDLINE : (+0420) 4768 346 57 89</p>
                       </div>
                     </div>
-                  </a>
+                  </div>
+                  <div class="read-more">
+                    <a href="bumiseduh.html" class="rq-btn rq-btn-primary border-radius">Lihat Profil Lengkap <i class="arrow_right"></i></a>
+                  </div>
                 </div>
-                <div class="col-md-4">
-                  <a href="#">
-                    <div class="rq-blog-grid-single  wow fadeIn" data-wow-delay="0.1s"
-                      style="background: url('assets/dist/img/real-estate/post-single/real-estate-related2.jpg') top center no-repeat;
-                      background-size: cover;">
-                      <div class="rq-overlay"></div>
-                      <span class="company-name">title of single post with image format</span>
-                      <div class="rq-listing-meta">
-                        <span class="date">15th,Dec,2016</span>
-                        <span class="v-line">|</span>
-                        <span class="author-name"><b>by</b>Admin</span>
-                        <span class="v-line">|</span>
-                        <span class="category"><b>in</b>Tips &amp; Tricks</span>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class="col-md-4">
-                  <a href="#">
-                    <div class="rq-blog-grid-single wow fadeIn" data-wow-delay=".2s"
-                      style="background: url('assets/dist/img/real-estate/post-single/real-estate-related3.jpg') top center no-repeat;
-                      background-size: cover;">
-                      <div class="rq-overlay"></div>
-                      <span class="company-name">title of single post with image format</span>
-                      <div class="rq-listing-meta">
-                        <span class="date">15th,Dec,2016</span>
-                        <span class="v-line">|</span>
-                        <span class="author-name"><b>by</b>Admin</span>
-                        <span class="v-line">|</span>
-                        <span class="category"><b>in</b>Tips &amp; Tricks</span>
-                      </div>
-                    </div>
-                  </a>
-                </div>
+              </div> <!-- end user list -->
+
+              <!-- start about section -->
+              <div class="rq-user-about wow fadeIn" data-wow-delay=".2s">
+                <h3 class="rq-title-secondary">Tentang Bumi Seduh</h3>
+                <p class="about-text">
+                  Quisque non dictum eros. Praesent porta vehicula arcu eu ornare. Donec id egestas arcu. Suspendisse auctor ali condimentum ligula ultricies cursus. Vestibulum vel orci vel lacus rhoncus sagittis sed vitae mi. Pellentesque suil molestie elit bibendum tincidunt semper. Aliquam ac volutpat risus. In felis felis, posuere commodo aliquet amit eget, sagittis sed turpis. Phasellus commodo turpis non nunc egestas, et egestas felis pretium. Pellentesque suli  dignissim libero vitae tincidunt semper. Nam id ante nisi. Nam sollicitudin, dolor non suscipit feugiat, nibh lacus commodo metus, nec tempus dui velit sagittis velit. Pellentesque elementum risus rhoncus justo porta, at varius odio consequat. Duis non augue adipiscing, posuere quam non, tempus urna.
+                </p>
+                <p class="about-text">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent.</p>
+
               </div>
+              
+              <!-- end about section -->
+
             </div>
 
           </div>
@@ -736,7 +733,7 @@
       <div class="rq-copyright-section">
         <div class="container">
           <div class="copyright-content">
-            <p>Copyrights © 2015 by <a href="#">SCHOLAR.</a> All Rights Reserved.</p>
+            <p>Copyrights © 2022 by Ari Dimas with theme by <a href="#">SCHOLAR.</a> All Rights Reserved.</p>
             <ul class="list-unstyled social-list">
               <li><a href="#">Home</a></li>
               <li><a href="#">Properties</a></li>
