changing profile picture

--- a/index.html
+++ b/index.html
@@ -599,8 +599,8 @@
             </div>
             <div class="rq-user-profile-page">
               <div class="rq-user-listing-single wow fadeIn" data-wow-delay=".1s"> <!-- start company user list -->
-                <div class="rq-user-profile-pic agency-logo">
-                  <img src="assets/dist/img/real-estate/company-user/agencies1.png" alt="">
+                <div class="rq-user-profile-pic agency-logo" style="height: 350px ;">
+                  <img style="height: 160% ; width: 250%;" src="assets/dist/img/logo/1.png" alt="">
                 </div>
                 <div class="rq-user-profile-details">
                   <div class="rq-user-pro-head">
