adding main about

--- a/index.html
+++ b/index.html
@@ -124,29 +124,16 @@
           <div class="container">
             <div class="rq-listing-counter home-counter wow fadeIn" data-wow-delay=".3s"> <!-- listing counter portion -->
               <div class="row">
-                <div class="col-md-3 col-sm-6">
-                  <div class="rq-listing-counter-item">
-                    <h3 class="rq-listing-counter-number" data-from="25" data-to="12460" data-speed="5000" data-refresh-interval="50" >12,460</h3>
-                    <p class="rq-listing-counter-title">Agents</p>
-                  </div>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                  <div class="rq-listing-counter-item">
-                    <h3 class="rq-listing-counter-number" data-from="25" data-to="10750" data-speed="5000" data-refresh-interval="50" >10, 750</h3>
-                    <p class="rq-listing-counter-title">Transactions</p>
-                  </div>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                  <div class="rq-listing-counter-item">
-                    <h3 class="rq-listing-counter-number" data-from="25" data-to="8670" data-speed="5000" data-refresh-interval="50" >8670</h3>
-                    <p class="rq-listing-counter-title">Agencies</p>
-                  </div>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                  <div class="rq-listing-counter-item no-border">
-                    <h3 class="rq-listing-counter-number" data-from="25" data-to="12630" data-speed="5000" data-refresh-interval="50" >12,630</h3>
-                    <p class="rq-listing-counter-title">suburbs</p>
-                  </div>
+                <div class="col-md-12 col-sm-12">
+                    <div class="rq-user-about wow fadeIn" data-wow-delay=".2s">
+                      <h3 class="rq-title" style="margin-top: 2vw;margin-bottom: 2vw ;text-align: center;">Tentang Bumi <span>Seduh</span></h3>
+                      <p class="about-text" style="margin-left: 1.5vw;margin-right: 1.5vw;">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bumi Seduh merupakan badan usaha yang fokus bergerak di bidang ekosistem industri kopi di Indonesia, yakni membuka dan mengelola Coffee Shop, suplai bahan baku dan peralatan, kosultasi, serta pengembangan SDM. Perusahaan ini mulai berdiri tahun 2021 berkantor di Jl. Wonosari KM 7 Bantul Yogyakarta.<br> Peluang bisnis ekosistem industri kopi di Indonesia sangat potensial dan pasarnya terus tumbuh berkembang setiap tahun. Coffee shop sebagai hilir dari industri ini terus mengalami perkembangan pesat, dan terus memperoleh minat dari pelanggan. Semakin tumbuhnya Coffee shop ini kemudian menciptakan peluang besar pada permintaan bahan baku, peralatan dan mesin, sumber daya manusia (SDM), serta konsultasi pengelolaan dan pemasaran semakin meningkat setiap tahunnya. <br> Dalam proses menjalankan usaha, PT Bumi Seduh Indonesia siap membuka diri untuk bermitra secara  transparan, akuntabel dan bertanggung jawab, serta berpegang teguh pada prinsp-prinsip bisnis yang berorientasi profit, berkontribusi pada sosial, dan mencapai kemakmuran bersama.
+                      </p>
+                      
+      
+                    </div>
+                  </div>   
                 </div>
               </div>
             </div> <!-- listing counter portion end -->
