adding visi misi

--- a/index.html
+++ b/index.html
@@ -626,13 +626,19 @@
 
               <!-- start about section -->
               <div class="rq-user-about wow fadeIn" data-wow-delay=".2s">
-                <h3 class="rq-title-secondary">Tentang Bumi Seduh</h3>
+                <h2 class="rq-title-secondary">Misi</h2>
+                <p class="about-text" style="color: black ;">
+                  Membangun ekosistem usaha kopi yang kuat, inovatif dan memelihara keselarasan bersama
+                </p>
+                <h2 class="rq-title-secondary">Visi</h2>  
                 <p class="about-text">
-                Bumi Seduh merupakan badan usaha yang fokus bergerak di bidang ekosistem industri kopi di Indonesia, yakni membuka dan mengelola Coffee Shop, suplai bahan baku dan peralatan, kosultasi, serta pengembangan SDM. Perusahaan ini mulai berdiri tahun 2021 berkantor di Jl. Wonosari KM 7 Bantul Yogyakarta.  <br>
-                Peluang bisnis ekosistem industri kopi di Indonesia sangat potensial dan pasarnya terus tumbuh berkembang setiap tahun. Coffee shop sebagai hilir dari industri ini terus mengalami perkembangan pesat, dan terus memperoleh minat dari pelanggan. Semakin tumbuhnya Coffee shop ini kemudian menciptakan peluang besar pada permintaan bahan baku, peralatan dan mesin, sumber daya manusia (SDM), serta konsultasi pengelolaan dan pemasaran semakin meningkat setiap tahunnya.<br>
-
-                Dalam proses menjalankan usaha, PT Bumi Seduh Indonesia siap membuka diri untuk bermitra secara  transparan, akuntabel dan bertanggung jawab, serta berpegang teguh pada prinsp-prinsip bisnis yang berorientasi profit, berkontribusi pada sosial, dan mencapai kemakmuran bersama.
-
+                  <ol style="color: black;">
+                    <li>Menginspirasi tumbuhnya usaha yang mengedepankan inovasi dan kreativitas.</li>
+                    <li>Bertindak menjalankan usaha secara transparan, bertanggung jawab, dan bermanfaat bagi sosial dan lingkungan.</li>
+                    <li>Membangun sumber daya manusia yang handal, profesional dan membumi.</li>
+                    <li>Tumbuh bersama kinerja yang manusiawi dan penuh kekeluargaan.</li>
+                  </ol>
+                </p>
               </div>
               
               <!-- end about section -->
