adding other start up

--- a/index.html
+++ b/index.html
@@ -48,14 +48,11 @@
                   <li class="active"><a href="index.html" >Home</a></li>
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Listing <span class="ion-chevron-down"></span></a>
+                      aria-haspopup="true" aria-expanded="false">Start-Up <span class="ion-chevron-down"></span></a>
                     <ul class="dropdown-menu">
-                      <li><a href="listing-plain-heading.html">Listing Plain Heading</a></li>
-                      <li><a href="listing-map.html">Listing Map</a></li>
-                      <li><a href="listing-slider.html">Listing Revolution Slider</a></li>
-                      <li><a href="listing-banner.html">Listing Banner</a></li>
-                      <li><a href="listing-adsense.html">Listing Adsense</a></li>
-                      <li><a href="listing-detail.html">Listing Details</a></li>
+                      <li><a href="tentrembumi.html">Tentrem Bumi</a></li>
+                      <li><a href="cangkirbumi.html">Cangkir Bumi</a></li>
+                      <li><a href="bumisuplai.html">Bumi Suplai</a></li>
                     </ul>
                   </li>
                   <li class=""><a href="lokasi.html" >Lokasi</a></li>
@@ -727,7 +724,7 @@
       <div class="rq-copyright-section">
         <div class="container">
           <div class="copyright-content">
-            <p>Copyrights © 2022 by Ari Dimas with theme by <a href="#">SCHOLAR.</a> All Rights Reserved.</p>
+            <p>Copyrights © 2022 Cangkir Bumis with theme by <a href="#">SCHOLAR.</a> All Rights Reserved. Develop by Ari Dimas</p>
             <ul class="list-unstyled social-list">
               <li><a href="#">Home</a></li>
               <li><a href="#">Properties</a></li>
