--- a/lokasi.html
+++ b/lokasi.html
@@ -40,14 +40,11 @@
                   <li class=""><a href="index.html" >Home</a></li>
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Listing <span class="ion-chevron-down"></span></a>
+                      aria-haspopup="true" aria-expanded="false">Start-Up <span class="ion-chevron-down"></span></a>
                     <ul class="dropdown-menu">
-                      <li><a href="listing-plain-heading.html">Listing Plain Heading</a></li>
-                      <li><a href="listing-map.html">Listing Map</a></li>
-                      <li><a href="listing-slider.html">Listing Revolution Slider</a></li>
-                      <li><a href="listing-banner.html">Listing Banner</a></li>
-                      <li><a href="listing-adsense.html">Listing Adsense</a></li>
-                      <li><a href="listing-detail.html">Listing Details</a></li>
+                      <li><a href="tentrembumi.html">Tentrem Bumi</a></li>
+                      <li><a href="cangkirbumi.html">Cangkir Bumi</a></li>
+                      <li><a href="bumisuplai.html">Bumi Suplai</a></li>
                     </ul>
                   </li>
                   <li class=""><a href="category.html" >Lokasi</a></li>
@@ -67,12 +64,12 @@
                   </li>
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Agents <span class="ion-chevron-down"></span></a>
+                      aria-haspopup="true" aria-expanded="false">Profil <span class="ion-chevron-down"></span></a>
                     <ul class="dropdown-menu">
                       <li><a href="users.html">Users</a></li>
                       <li><a href="user-profile.html">User Profile</a></li>
                       <li><a href="agencies.html">Agencies</a></li>
-                      <li><a href="agency-single.html">Agency singe</a></li>
+                      <li><a href="bumiseduh.html">Bumi Seduh</a></li>
                       <li><a href="registration.html">Registration</a></li>
                     </ul>
                   </li>
